# mcp-k8s

./: .aider.chat.history.md  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.simple  Makefile  README.md  README_DOCKER.md  build_and_run.sh  build_run_test.sh  docker-compose.yml  mcp_test_client.py  pyproject.toml  spec.md  start.sh  verify_helm_deployment.sh
.github/workflows/: ci.yml  integration-tests.yml  release-chart.yaml  release-create.yml  release-image.yml  release-version.yml  release.yml
deploy/docker/: Dockerfile  docker-compose.yml
deploy/helm/: Chart.yaml
deploy/helm/k8s-mcp-server/: values.yaml
deploy/helm/k8s-mcp-server/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
docs/: environment-variables.md  feature_proposal_multi_cluster_streaming.md
src/k8s_mcp_server/: __init__.py  __main__.py  app.py  cli_executor.py  config.py  errors.py  logging_utils.py  models.py  prompts.py  security.py  server.py  tools.py
tests/: conftest.py  helpers.py
tests/integration/: conftest.py  k0s_fixture.py  test_k8s_tools.py
tests/unit/: test_cli_executor.py  test_errors.py  test_k8s_tools.py  test_main.py  test_prompts.py  test_security.py  test_server.py  test_tool_specific.py  test_tools.py
~/.config/mcphost/: config.yaml
