[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-mcp-server"
version = "1.3.0"
description = "MCP Server for Kubernetes CLI tools (kubectl, istioctl, helm, argocd)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.6.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "PyYAML>=6.0.1",
    "loguru>=0.7.2",
    "psutil>=5.9.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
    "fastapi-mcp>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 160
target-version = ['py313']

[tool.ruff]
line-length = 160
target-version = 'py313'

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
# Skip integration tests by default, run with coverage
addopts = "-m 'not integration' --cov=k8s_mcp_server"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests requiring a Kubernetes cluster",
    "unit: marks tests as unit tests not requiring external dependencies"
]

[tool.uv.sources]
k8s-mcp-server = { path = "." }
